@@ -1,3 +1,8 @@
+Mon Dec  2 02:03:47 2013  Shota Fukumori  <her@sorah.jp>
+
+	* test/ruby/test_case.rb (test_nomethoderror):
+	  Add test related to r43913, r43914
+
 Mon Dec  2 00:53:01 2013  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* hash.c (getenv): use ANSI codepage version of getenv() for miniruby
